Company class added